<resources>
    <string name="app_name">Miaumerah</string>
    <string name="title_header">Desa Miaumerah</string>
    <string name="todo">TODO</string>
    <string name="portal_desa">Portal Desa</string>
    <string name="pengumuman">Pengumuman</string>
    <string name="layanan_mandiri">Layanan</string>
    <string name="panduan">Panduan</string>
    <string name="sop">Sop / Perdes</string>
    <string name="adminDesa">Admin Desa</string>

    <string name="title_activity_splashscreen">SplashscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="nama_desa">Miau Merah</string>
    <string name="nama_kabupaten">Kabupaten Kapuas Hulu</string>
    <string name="info_footer">Pemerintah Desa Miau Merah \n  www.miaumerah.desa.id | info@miaumerah.desa.id \n  Supported by : Portal Desa Digital  \n Pendampingan : Fathurrahman</string>
    <string name="covid">Covid 19</string>
    <string name="pin">Daftar Pin</string>
    <string name="jadwal">Jadwal</string>
</resources>
